[workspace]
members = [
	"runtime",
	"runtime-modules/proposals/engine",
	"runtime-modules/proposals/codex",
	"runtime-modules/proposals/discussion",
	"runtime-modules/common",
	"runtime-modules/council",
	"runtime-modules/forum",
	"runtime-modules/membership",
	"runtime-modules/referendum",
	"runtime-modules/storage",
	"runtime-modules/working-group",
	"runtime-modules/content",
	"runtime-modules/constitution",
	"runtime-modules/staking-handler",
	"runtime-modules/bounty",
	"runtime-modules/utility",
	"runtime-modules/project-token",    
	"bin/node",
	# "bin/inspect",
	"bin/utils/chain-spec-builder/",
	"bin/utils/session-keys/",
	"bin/utils/call-sizes/",
	"runtime-modules/support/derive-fixture",
]
exclude = [
    "analyses/bench"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[patch.crates-io]
ss58-registry = { package = 'ss58-registry', git = 'https://github.com/bwhm/ss58-registry', rev = 'a70121e7bbb56f983f6f17771cc79d8f19b481a0'}
