[workspace]
resolver = "2"

members = [
	"runtime",
	"runtime-modules/proposals/engine",
	"runtime-modules/proposals/codex",
	"runtime-modules/proposals/discussion",
	"runtime-modules/common",
	"runtime-modules/council",
	"runtime-modules/forum",
	"runtime-modules/membership",
	"runtime-modules/referendum",
	"runtime-modules/storage",
	"runtime-modules/working-group",
	"runtime-modules/content",
	"runtime-modules/constitution",
	"runtime-modules/staking-handler",
	"runtime-modules/bounty",
	"runtime-modules/utility",
	"runtime-modules/project-token",    
	"bin/node",
	"bin/inspect",
	"bin/utils/chain-spec-builder/",
	"bin/utils/session-keys/",
	"bin/utils/call-sizes/",
	"runtime-modules/support/derive-fixture",
]
exclude = [
    "analyses/bench"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
