[package]
name = 'joystream-node'
authors = ['Anonymous']
description = 'A new Cumulus FRAME-based Substrate node, ready for hacking.'
license = 'Unlicense'
version = '3.0.0'
homepage = 'https://substrate.dev'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'
edition = '2018'
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'joystream-node'
path = 'bin/main.rs'

[dependencies]
derive_more = '0.15.0'
log = "0.4.13"
codec = { package = 'parity-scale-codec', version = '2.1.1', default-features = false, features = ['derive']}
hex-literal = "0.2.1"

# RPC related dependencies
jsonrpc-core = "15.1.0"
serde = { version = "1.0.126", features = ["derive"] }
structopt = "0.3.8"
serde_json = '1.0'
hex = { package = "hex", version = "0.4.2" }

# Local Dependencies
joystream-node-runtime = { path = '../runtime' }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }

pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }

substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-consensus-babe-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-consensus-slots = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-finality-grandpa-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-authority-discovery = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-network = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-service = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.4", features = ['wasmtime'] }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-authority-discovery = {git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.4' }

# Cumulus dependencies
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.4' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.4' }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.4' }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.4' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.4' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.4' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.4' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.4' }

# Polkadot dependencies
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.4'}
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.4'}
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.4'}
polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.4'}
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.4'}

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', optional = true}
sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', optional = true}
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', optional = true }
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.4', optional = true }

[features]
default = []
standalone = []
cli = [
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
]
runtime-benchmarks = [
	"joystream-node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]